# multiversx-etl

./: .gitignore  Dockerfile  README.md  docker-compose-plan.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: test.yml
docker/: Dockerfile  docker-compose-plan.yml  docker-compose.yml
docker/env/: devnet.env  mainnet.env  testnet.env
maintenance/: clustering.md  schemas.md  views.md
multiversxetl/: __main__.py  app.py  app_controller.py  atomic.py  bq_client.py  bq_client_test.py  checks.py  constants.py  errors.py  file_storage.py  indexer.py  indexer_test.py  logger.py  schema.py  schema_test.py  task.py  tasks_dashboard.py  tasks_runner.py  threading.py  transformers.py  transformers_test.py  worker_config.py  worker_state.py
multiversxetl/cli/: __init__.py  checks.py  export_blocks_and_transactions.py  get_block_range_for_date.py  get_block_range_for_timestamps.py  plan_tasks.py  plan_tasks_test.py  run.py  schema.py  work.py
multiversxetl/config/: worker_config_devnet.json  (+2 more)
queries/: blocks.sql  interactions.sql  transactions.sql
schema/: accounts.json  accountsesdt.json  accountsesdthistory.json  accountshistory.json  blocks.json  delegators.json  epochinfo.json  esdts.json  events.json  logs.json  miniblocks.json  operations.json  rating.json  receipts.json  rounds.json  scdeploys.json  scresults.json  tags.json  tokens.json  transactions.json  validators.json
schemas/: accountsesdt.json  accountshistory.json  blocks.json  epochinfo.json  esdts.json  logs.json  miniblocks.json  operations.json  tokens.json
(+41 files in other folders)
