[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-etl"
version = "0.1.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]
foo = "multiversxetl.cli:cli"

[project.urls]
"Homepage" = ""
